--- a/index.css
+++ b/index.css
@@ -1,6 +1,11 @@
 body {
     white-space: nowrap;
 }
+footer {
+    bottom: 0.2em;
+    left: 0.5em;
+    position: fixed;
+}
 h1 {
     font-size: 1.5em;
 }
